update content and images
Update content to change discounts and shipping offer. Add an "alt" tag to all images.

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
           Formaldehyde, NO Toluene, NO Dibutyl Phthalate (DBP), NO Formaldehyde
           Resin, NO Camphor, NO Ethyl Tosylamide, NO Xylene, NO Parabens, NO Animal by-Products, and NO Fragrance. Just
           100% Pure Sweetness!! </p>
+        <p class="lead">Want more? Then check out our <a href="lookbook.html">lookbook</a> for nail art and color inspiration.</p>
       </div>
-      <!-- <div class="col-md-1"></div> -->
       <div class="col-md-5 mt-5 image justify-content-center">
-        <img class="img-fluid mx-auto" src="images/Sugarloom-5-min.jpg" width="350" height="350" alt="">
+        <img class="img-fluid mx-auto" src="images/Sugarloom-5-min.jpg" width="350" height="350" alt="Sugarloom non-toxic nail polish">
       </div>
     </div>
   </div>
@@ -101,19 +101,19 @@
     <h3 class="pb-4 heading text-uppercase">Featured On</h3>
     <div class="row press-content m-xl-5 justify-content-center align-items-baseline">
       <div class="col-12 col-sm-6 col-lg-4 col-xl px-4 py-5 px-sm-5 px-xl-4 py-xl-0">
-        <img class="press-logo" src="images/vogue-logo.svg" alt="Sugarloom featured on British Vogue">
+        <img class="press-logo" src="images/vogue-logo.svg" alt="Sugarloom Cosmetics featured on British Vogue">
       </div>
       <div class="col-12 col-sm-6 col-lg-4 col-xl px-4 py-5 px-sm-5 px-xl-4 py-xl-0">
-        <img class="press-logo" src="images/cosmo-logo.svg" alt="Sugalroom featured on Cosmopolitan UK">
+        <img class="press-logo" src="images/cosmo-logo.svg" alt="Sugalroom Cosmetics featured on Cosmopolitan UK">
       </div>
       <div class="col-12 col-sm-6 col-lg-4 col-xl px-4 py-5 px-sm-5 px-xl-4 py-xl-0">
-        <img class="press-logo" src="images/elle-logo.svg" alt="Sugarloom featured on Elle UK">
+        <img class="press-logo" src="images/elle-logo.svg" alt="Sugarloom Cosmetics featured on Elle UK">
       </div>
       <div class="col-12 col-sm-6 col-lg-4 col-xl px-4 py-5 px-sm-5 px-xl-4 py-xl-0">
-        <img class="press-logo" src="images/forbes-logo.svg" alt="Sugarloom featured on Forbes">
+        <img class="press-logo" src="images/forbes-logo.svg" alt="Sugarloom Cosmetics featured on Forbes">
       </div>
       <div class="col-12 col-sm-6 col-lg-4 col-xl px-4 py-5 px-sm-5 px-xl-4 py-xl-0 align-self-center">
-        <img class="press-logo ebony-logo" src="images/ebony-logo.png" alt="Sugarloom featured in Ebony Magazine">
+        <img class="press-logo ebony-logo" src="images/ebony-logo.png" alt="Sugarloom Cosmetics featured in Ebony Magazine">
       </div>
     </div>
     <p class="lead font-italic text-right pb-0 mb-0"><u>and more.</u></p>
@@ -122,20 +122,20 @@
   <div id="wholesale" class="container wholesale mt-5 py-3 section">
     <div class="row wholesale-content">
       <div class="col-md-4 wholesale-col">
-        <img class="img-fluid rounded" src="images/Sugarloom-9-min.jpg" width="140" height="140" alt="">
+        <img class="img-fluid rounded" src="images/Sugarloom-9-min.jpg" width="140" height="140" alt="Sugarloom Cosmetics non-toxic nail polish">
         <h2>Low Order Minimums</h2>
         <p>Whether you're a salon, a boutique, or a blogger, we're happy that you're interested in carrying our line of
           products. We offer retailers the opportunity to start small and are currently accepting new accounts.</p>
       </div>
       <div class="col-md-4 my-3 my-md-0 wholesale-col">
-        <img class="img-fluid rounded" src="images/Sugarloom-25-min.jpg" width="140" height="140" alt="">
+        <img class="img-fluid rounded" src="images/Sugarloom-25-min.jpg" width="140" height="140" alt="Sugarloom Cosmetics non-toxic nail polish">
         <h2>Vibrant Nail Colors</h2>
         <p>We offer 30+ high-shine, chip resistant, vibrant nail colors in different finishes from glitter to neons to
           créme and satin...there's something to delight everyone. All our colors are non-toxic, cruelty-free and vegan.
         </p>
       </div>
       <div class="col-md-4 wholesale-col">
-        <img class="img-fluid rounded" src="images/Sugarloom-17-min.jpg" width="140" height="140" alt="">
+        <img class="img-fluid rounded" src="images/Sugarloom-17-min.jpg" width="140" height="140" alt="Sugarloom Cosmetics non-toxic nail polish">
         <h2>Extra Goodies</h2>
         <p>Our wholesale catalog is now live on <a href="https://www.hubba.com" target="_blank">Hubba.com</a>. Check out
           our Color Collection and get $100 off your first order<sup>*</sup> when you sign up below. Plus get Free
@@ -154,9 +154,11 @@
     <!-- Contact Form -->
     <div class="row">
       <div class="col-10 col-md-7 col-xl-5 mx-auto contact-form">
+        <!-- Formspree Form Integration on AWS -->
         <!-- <form id="contact-form" class="needs-validation" novalidate method="post"
-        action="https://formspree.io/info@sugarloomcosmetics.com" role="form"> -->
-        <form id="contact-form" class="needs-validation" novalidate data-netlify="true" role="form">
+          action="https://formspree.io/info@sugarloomcosmetics.com" role="form"> -->
+          <!-- Netlify form integration -->
+          <form id="contact-form" class="needs-validation" novalidate data-netlify="true" role="form">
           <div class="form-group">
             <label for="name">Name</label>
             <input class="form-control" type="text" name="name" value="" id="name" placeholder="Jane Doe" required>
@@ -192,7 +194,8 @@
 
   <!-- Footer Section -->
   <footer class="container-fluid pt-5 text-center footer section">
-    <p class="copyright mb-0">&copy; Sugarloom Cosmetics 2019.</p>
+    <p class="copyright mb-0">&copy; Sugarloom Cosmetics
+      <script type="text/javaScript">document.write(new Date().getFullYear());</script>.</p>
     <p class="attribution">Made with 💛 <a href="https://github.com/nityagulati" target="_blank">Nitya Gulati</a></p>
     <!-- End Footer Section -->
   </footer>
