--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <img src="images/SUGARLOOM-Logo-Primary-Pink.png" width="241.5px" height="60px" alt="SUGARLOOM Cosmetics">
       </a>
       <!-- Notification Bar -->
-      <a href="#wholesale">
+      <!-- <a href="#wholesale">
         <button type="button" class="badge badge-warning badge-position">
           Free Shipping on orders over $200!!
           <span class="sr-only">Free Shipping on orders over $200</span>
         </button>
-      </a>
+      </a> -->
       <!-- Mobile Toggle Menu button -->
       <button class="navbar-toggler m-3" type="button" data-toggle="collapse" data-target="#navbar-menu">
         <span class="toggle-btn-text invisible">Menu Toggler</span>
@@ -60,13 +60,15 @@
     <div class="container my-sm-5 my-md-3 my-lg-5 hero-container">
       <div class="row hero-content">
         <div class="col-sm-10 col-md-8 col-lg-7 col-xl-5 mx-auto text-center">
-          <h1 class="heading pt-3">Get $100 OFF your first order.</h1>
-          <p class="lead pt-3 black-font">Snag our long-lasting, non-toxic, vegan nail colors and get
-            $100 OFF on orders of $150 or more!</p>
-          <p class="small black-font mt-4 mt-xl-5"><sup>*</sup>For wholesale orders only. Sign up with our wholesale
-            partner Hubba.com to redeem (valid for new Hubba users only).</p>
+          <!-- <h1 class="heading pt-3">Get $100 OFF your first order.</h1> -->
+          <h1 class="heading pt-3">Snag our long-lasting, non-toxic, vegan nail colors.</h1>
+          <!-- <p class="lead pt-3 black-font">Snag our long-lasting, non-toxic, vegan nail colors and get
+            $100 OFF on orders of $150 or more!</p> -->
+            <p class="lead pt-3 black-font">All our luxury nail colors are 10Free, cruelty-free and Made in the USA. Available in different finishes and textures.</p>
+          <!-- <p class="small black-font mt-4 mt-xl-5"><sup>*</sup>For wholesale orders only. Sign up with our wholesale
+            partner Hubba.com to redeem (valid for new Hubba users only).</p> -->
           <p class="lead hero-btn mt-5">
-            <a href="#wholesale" class="btn btn-lg btn-primary">Shop Now</a>
+            <a href="#about" class="btn btn-lg btn-primary">Learn More</a>
           </p>
         </div>
       </div>
@@ -80,8 +82,9 @@
   <div id="about" class="container about my-xl-5 py-5 my-lg-0 text-sm-center text-md-left">
     <div class="row">
       <div class="col-md-7 pr-lg-5 description">
-        <h2 class="heading">For the modern gal (and guy) who live life in color, <span class="text-muted">there's
-            SUGARLOOM.</span></h2>
+        <!-- <h2 class="heading">For the modern girl (and guy) who live life in color, <span class="text-muted">there's
+            SUGARLOOM.</span></h2> -->
+        <h2 class="heading">For the One who lives life in color, <span class="text-muted">there's SUGARLOOM.</span></h2>
         <p class="lead">Non-toxic, Cruelty-free, Vegan Nail Colors; manufactured and bottled in the USA. Our high-shine
           collection evokes everything from the radiance of berries and spring blooms to the
           sophistication of the runway’s latest trends.</p>
@@ -136,17 +139,21 @@
       </div>
       <div class="col-md-4 wholesale-col">
         <img class="img-fluid rounded" src="images/Sugarloom-17-min.jpg" width="140" height="140" alt="Sugarloom Cosmetics non-toxic nail polish">
-        <h2>Extra Goodies</h2>
-        <p>Our wholesale catalog is now live on <a href="https://www.hubba.com" target="_blank">Hubba.com</a>. Check out
+        <!-- <h2>Extra Goodies</h2> -->
+        <h2>Lots of Goodies</h2>
+        <!-- <p>Our wholesale catalog is now live on <a href="https://www.hubba.com" target="_blank">Hubba.com</a>. Check out
           our Color Collection and get $100 off your first order<sup>*</sup> when you sign up below. Plus get Free
           Shipping on orders over
-          $200!!</p>
-        <p><a class="btn btn-lg btn-primary mt-5" href="https://app.hubba.com/signup/referral/sugarloom-cosmetics"
-            target="_blank" role="button">Sign Up &raquo;</a></p>
+          $200!!</p> -->
+          <p>Along with vibrant nail colors, we also carry fun goodies and accessories to play with. Such as Nail Art Sketchbooks and dainty Nail Art stickers and decals.</p>
+        <p>
+        <!-- <a class="btn btn-lg btn-primary mt-5" href="https://app.hubba.com/signup/referral/sugarloom-cosmetics"
+            target="_blank" role="button">Sign Up &raquo;</a></p> -->
       </div>
     </div>
-    <p class="small text-center pt-3 mt-sm-0 pt-xl-5 mt-xl-5"><sup>*</sup>Offer available to US retailers only. Sign up
-      with our wholesale partner Hubba.com to redeem (valid for new Hubba users). Other restrictions may apply.</p>
+    <!-- <p class="small text-center pt-3 mt-sm-0 pt-xl-5 mt-xl-5"><sup>*</sup>Offer available to US retailers only. Sign up
+      with our wholesale partner Hubba.com to redeem (valid for new Hubba users). Other restrictions may apply.</p> -->
+      <p class="small text-center pt-3 mt-sm-0 pt-xl-5 mt-xl-5">Fill out the Contact form below to inquire about our products or to get a custom quote. We only work with US retailers at the moment.</p>
   </div>
   <!-- Contact Section -->
   <div id="contact" class="container contact my-4 py-4 section">
